# UNC-OS-Practical1

./: .env.example  .gitmodules  CMakeLists.txt  INSTALL.md  README.md  docker-compose.yml
.github/workflows/: ci.yml
alertmanager/: alertmanager.yml.tmpl  entrypoint.sh
blackbox/: blackbox.yml
grafana/dashboards/: systemsentinel-overview.json
grafana/provisioning/dashboards/: dashboard.yml
include/: expose_metrics.h  metrics.h
prometheus/: alert.rules.yml  prometheus.yml
scripts/: bootstrap-dev.sh  check-no-secrets.sh  ci-smoke.sh  docker-housekeeping.sh  install-oracle-arm.sh  run-hooks.sh  up.sh  update-hooks.sh
src/: expose_metrics.c  main.c  metrics.c
